@@ -1,3 +1,8 @@
+2017-02-19  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>
+
+	* gimple-parser.c (c_parser_gimple_postfix_expression): Handle
+	FMA_EXPR.
+
 2017-02-16  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/79512
