@@ -1,3 +1,7 @@
+2017-02-19  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>
+
+	* gcc.dg/gimplefe-26.c: New test.
+
 2017-02-18  John David Anglin  <danglin@gcc.gnu.org>
 
 	* g++.dg/tls/thread_local-order2.C: xfail on hppa*-*-hpux*.
