@@ -1,3 +1,8 @@
+2017-02-19  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>
+
+	* gimple-pretty-print.c (dump_ternary_rhs): Adjust gimple dump format
+	for FMA_EXPR.
+
 2017-02-18  Jakub Jelinek  <jakub@redhat.com>
 
 	* final.c (last_columnnum, override_columnnum): New variables.
